fixed spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -281,6 +281,7 @@ My Added CSS
 
 .intro{
     margin-bottom: $spacing-unit / 3;
+    margin-left: $spacing-unit / 3;
     max-width: 400px;
     width: 100%;
     display: inline-block;
